// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Individual Ticket reducer Set end date moment object 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": Object {
    "title": "End Moment",
  },
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set has been created value 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set has been created value 2`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": true,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set is loading value 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set is loading value 2`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": true,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set start date moment object 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": Object {
    "title": "Start Moment",
  },
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set ticket post ID 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 10,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set ticket pristine 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer Set ticket pristine 2`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": false,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket capacity 1`] = `
Object {
  "SKU": "",
  "capacity": 49,
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket capacity type 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": 59,
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket description 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "The Next Generation of Digital Agency",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket end date 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": undefined,
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket end time 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": undefined,
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket is editing 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": true,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket is editing 2`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": true,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket price 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": 102,
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket sku 1`] = `
Object {
  "SKU": "MODERN-TRIBE",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket start date 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": undefined,
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket start time 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": undefined,
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "",
}
`;

exports[`Individual Ticket reducer ticket title 1`] = `
Object {
  "SKU": "",
  "capacity": "",
  "capacityType": "own",
  "dateIsPristine": true,
  "description": "",
  "endDate": "January 13, 2018",
  "endDateMoment": "2018-01-10T17:30:00.000Z",
  "endTime": "17:30",
  "hasBeenCreated": false,
  "isEditing": false,
  "isLoading": false,
  "price": "",
  "sold": 0,
  "startDate": "January 10, 2018",
  "startDateMoment": "2018-01-10T17:30:00.000Z",
  "startTime": "17:30",
  "ticketId": 0,
  "title": "Modern Tribe",
}
`;
